[workspace]

[package]
name = "mtpdb_manager"
version = "0.1.0"
edition = "2021"
description = "MTPDB Manager — provisions and supervises local MTPDB instances, receives commands from master"

[dependencies]
tokio = { version = "1", features = ["full"] }
axum = "0.7"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["json"] }
uuid = { version = "1", features = ["v4"] }
chrono = "0.4"
rand = "0.8"
